--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <p id="msg">Play Your Move</p>
     </div>
 
-<script src="app.js "></script>
+<script src="script.js"></script>
 </body>
 </html>
